fixing social media nav alignment

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -66,6 +66,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 6px;
     a svg {
         width: 30px;
         height: 30px;
